--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -27,9 +27,9 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
+- name: brokerxp
+  config_file: brokerxp.yml
 #- name: fm-fx
 #  config_file: fm-fx.yml
-- name: capitalmarketsbanc
-  config_file: capitalmarketsbanc.yml
+#- name: capitalmarketsbanc
+#  config_file: capitalmarketsbanc.yml
