--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,8 +1,8 @@
 brands:
 - name: kayafx
   config_file: kaya_fx.yml
-- name: rimarkets
-  config_file: rimarkets.yml
-- name: gmo
-  config_file: gmo.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: gmo
+#  config_file: gmo.yml
 
