--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -3,8 +3,8 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
   class: CheckModules
   tests:
-    - test_check_dashboard
-    - test_check_leaderboard
+#    - test_check_dashboard
+#    - test_check_leaderboard
     - test_check_user_management
 
   ###General
