--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,8 +1,8 @@
 brands:
 #- name: q8
 #  config_file: q8.yml
-- name: 4xfx
-  config_file: 4xfx.yml
+#- name: 4xfx
+#  config_file: 4xfx.yml
 - name: ptbanc
   config_file: ptbanc.yml
 
