--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -108,12 +108,15 @@ tests_config:
 #    - test_create_campaign
 #    - test_edit_campaign
 #    - test_delete_campaign
-#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
-#  class: CheckModulesTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+  class: CheckModulesTest
+  tests:
 #    - test_my_dashboard_loading
 #    - test_audit_logs_loading
-- module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
-  class: CRMConfigurationsTest
-  tests:
-    - test_crm_configurations_pages_loading
+    - test_check_dashboard
+    - test_check_leaderboard
+    - test_check_user_management
+#- module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
+#  class: CRMConfigurationsTest
+#  tests:
+#    - test_crm_configurations_pages_loading
