--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,12 +1,17 @@
 tests_config:
 
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
-  class: CheckModules
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+#  class: CheckModules
+#  tests:
 #    - test_check_dashboard
 #    - test_check_leaderboard
-    - test_check_user_management
-
+#    - test_check_user_management
+#    - test_my_dashboard_loading
+#    - test_audit_logs_loading
+- module: src.test.python.ui.automation.implementation.crm.tests_crm_configuration.Test_CRM_Configurations
+  class: CRMConfigurationsTest
+  tests:
+    - test_crm_configurations_pages_loading
   ###General
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
 #  class: FilterModulesTest
