--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -1,6 +1,8 @@
 brands:
 
-- name: b-finance
-  config_file: b-finance.yml
+#- name: b-finance
+#  config_file: b-finance.yml
+  - name: tradospot
+  config_file: tradospot.yml
 
 
