--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -32,7 +32,8 @@ tests_config:
   directive: reload_configuration
   class: LeadModuleTest
   tests:
-    - test_edit_lead_pencil_icon
+#    - test_edit_lead_pencil_icon
+    - test_check_email_popup
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
 #  class: LeadModuleTest
