--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -28,12 +28,12 @@ tests_config:
 #    - test_edit_lead
 
 
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
 #    - test_edit_lead_pencil_icon
-    - test_check_email_popup
+#    - test_check_email_popup
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
 #  class: LeadModuleTest
@@ -128,10 +128,10 @@ tests_config:
 #  class: CRMConfigurationsTest
 #  tests:
 #    - test_crm_configurations_pages_loading
-#- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-#  class: WorkflowsModulesTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
+  class: WorkflowsModulesTest
+  tests:
 #    - test_create_workflows
 #    - test_check_workflow_by_status
-#    - test_check_workflow_by_country
-#    - test_delete_workflow
+    - test_check_workflow_by_country
+    - test_delete_workflow
