--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -29,9 +29,9 @@ tests_config:
     - sorting_lead_module
     - test_mass_assign_leads
     - test_mass_edit_leads
-    - export_full_list #only for one process
-    - export_select_records #only for one process
-    - import_leads #only for one process
+#    - export_full_list #only for one process
+#    - export_select_records #only for one process
+#    - import_leads #only for one process
 
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
