--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,5 +1,7 @@
 brands:
-- name: rimarkets
-  config_file: rimarkets.yml
-- name: gmo
-  config_file: gmo.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: gmo
+#  config_file: gmo.yml
+- name: itrader
+  config_file: itrader.yml
