--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -3,5 +3,5 @@ brands:
 #  config_file: finmarket.yml
 #- name: kayafx
 #  config_file: kaya_fx.yml
-- name: brokerxp
-  config_file: brokerxp.yml
+- name: fxpmarkets
+  config_file: fxpmarkets.yml
