--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -2,8 +2,10 @@ brands:
 
 #- name: aztrades
 #  config_file: aztrades.yml
-- name: q8
-  config_file: q8.yml
+#- name: q8
+#  config_file: q8.yml
+- name: brokerz
+  config_file: brokerz.yml
 
 
 
