--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -8,7 +8,7 @@ FirstLeadInfo:
   last_name: "DoeA"
   mobile: "8888888"
   fax: "5555"
-  EVAL_email: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
+  EVAL_email: "'test_ptscrm+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S')) + '@pandats.com'"
   secondary_email: "secondarytestqa+1@pandats.com"
   first_language: "English"
   panda_partner_id:
