--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -6,9 +6,9 @@ brands:
 #  config_file: coinstec.yml
 #- name: 24btcmarket
 #  config_file: 24btcmarket.yml
-#- name: tradospot
-#  config_file: tradospot.yml
-- name: gigafx
-  config_file: gigafx.yml
+- name: tradospot
+  config_file: tradospot.yml
+#- name: gigafx
+#  config_file: gigafx.yml
 
 
