--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: finmarket
-  config_file: finmarket.yml
+#- name: finmarket
+#  config_file: finmarket.yml
 - name: kayafx
   config_file: kaya_fx.yml
 
