--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -7,8 +7,8 @@ brands:
 #  config_file: safemarkets.yml
 #- name: b-traderfx
 #  config_file: b-traderfx.yml
-- name: royal_cfds
-  config_file: royal_cfds.yml
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
 #- name: forexbestmarket
@@ -27,8 +27,8 @@ brands:
 #  config_file: uft.yml
 #- name: brokerz
 #  config_file: brokerz.yml
-#- name: 4xfx
-#  config_file: 4xfx.yml
+- name: 4xfx
+  config_file: 4xfx.yml
 #- name: herdos
 #  config_file: herdos.yml
 #- name: ptbanc
@@ -43,8 +43,8 @@ brands:
 #  config_file: aztrades.yml
 #- name: bots
 #  config_file: bots.yml
-- name: kontofx
-  config_file: kontofx.yml
+#- name: kontofx
+#  config_file: kontofx.yml
 #- name: xtraderfx
 #  config_file: xtraderfx.yml
 #- name: firstindex
