new branch for run

--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,9 +1,11 @@
 brands:
-- name: capitalmarketsbanc
-  config_file: capitalmarketsbanc.yml
-- name: itrader_global
-  config_file: itrader_global.yml
-
+- name: fxpmarkets
+  config_file: fxpmarkets.yml
+#- name: capitalmarketsbanc
+#  config_file: capitalmarketsbanc.yml
+#- name: itrader_global
+#  config_file: itrader_global.yml
+#
 
 
 
