--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,8 +3,8 @@ brands:
 #  config_file: 2mercados.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
-- name: 4xfx
-  config_file: 4xfx.yml
+#- name: 4xfx
+#  config_file: 4xfx.yml
 #- name: coinstec
 #  config_file: coinstec.yml
 #- name: mpcrypto
@@ -13,8 +13,8 @@ brands:
 #  config_file: b-finance.yml
 #- name: aztrades
 #  config_file: aztrades.yml
-#- name: brokerz
-#  config_file: brokerz.yml
+- name: brokerz
+  config_file: brokerz.yml
 #- name: eafx
 #  config_file: eafx.yml
 #- name: goldenmarkets
