--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -1,5 +1,7 @@
 brands:
-- name: kbcapitals
-  config_file: kbcapitals.yml
+- name: kaya_fx
+  config_file: kaya_fx.yml
+#- name: kbcapitals
+#  config_file: kbcapitals.yml
 
 
