--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -27,12 +27,12 @@ tests_config:
 #    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
 #    - test_edit_lead
 #
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  directive: reload_configuration
-#  class: LeadModuleTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
 #    - test_edit_lead_pencil_icon
-#    - test_check_email_popup
+    - test_check_email_popup
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
 #  directive: reload_configuration
 #  class: LeadModuleTest
@@ -130,10 +130,10 @@ tests_config:
 #  class: AutoAssignModuleTest
 #  tests:
 #    - test_perform_delete_rule
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
-  class: CheckModulesTest
-  tests:
-    - test_my_dashboard_loading
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+#  class: CheckModulesTest
+#  tests:
+#    - test_my_dashboard_loading
 #    - test_audit_logs_loading
 #    - test_check_dashboard
 #    - test_check_leaderboard
