--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -62,12 +62,10 @@ tests_config:
 #    - test_add_event
 #    - test_edit_event
 #    - test_delete_interaction
-    - test_email_icon
+#    - test_email_icon
 #    - test_sms_icon
 #    - test_mass_edit_tasks
-#    - test_mass_email_tasks
-#    - test_sorting_tasks
-#    - test_searching_by_columns
+    - test_searching_by_columns
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
 #  class: TradingAccountCrmTest
