--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -25,8 +25,8 @@ brands:
 #  config_file: optionstars.yml
 #- name: uft
 #  config_file: uft.yml
-- name: brokerz
-  config_file: brokerz.yml
+#- name: brokerz
+#  config_file: brokerz.yml
 #- name: 4xfx
 #  config_file: 4xfx.yml
 #- name: herdos
@@ -51,8 +51,8 @@ brands:
 #  config_file: firstindex.yml
 #- name: coinstec
 #  config_file: coinstec.yml
-#- name: tradospot
-#  config_file: tradospot.yml
+- name: tradospot
+  config_file: tradospot.yml
 #- name: 24btcmarket
 #  config_file: 24btcmarket.yml
 #- name: marketsplus
