--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -10,13 +10,13 @@ tests_config:
 #    - test_create_filter_help_desk
 #    - test_create_filter_trading_account_module
 #  #Leads
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-#  class: TabLeadsModuleCRM
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+  class: TabLeadsModuleCRM
+  tests:
 #    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
 #    - sorting_lead_module
 #    - test_mass_assign_leads
-#    - test_mass_edit_leads
+    - test_mass_edit_leads
 #    - export_full_list #only for one process
 #    - export_select_records #only for one process
 #    - import_leads #only for one process
@@ -153,10 +153,10 @@ tests_config:
 #  class: CRMConfigurationsTest
 #  tests:
 #    - test_crm_configurations_pages_loading
-- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-  class: WorkflowsModulesTest
-  tests:
-    - test_create_workflows
+#- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
+#  class: WorkflowsModulesTest
+#  tests:
+#    - test_create_workflows
 #    - test_check_workflow_by_status
-    - test_check_workflow_by_country
+#    - test_check_workflow_by_country
 #    - test_delete_workflow
