--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -4,8 +4,8 @@ brands:
 #  config_file: aztrades.yml
 - name: q8
   config_file: q8.yml
-- name: brokerz
-  config_file: brokerz.yml
+#- name: brokerz
+#  config_file: brokerz.yml
 
 
 
