--- a/src/main/python/ui/crm/model/BrandsXpath/kayafx_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/kayafx_xpath.yml
@@ -1,3 +1,5 @@
+LeadViewInfo:
+  convert_lead_module: "//div[@id='sidebar']//tr[3]//a"
 FinancialTransactionsPage:
   transaction_type_drop_down: "//td[7]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
